Fix channel following not working when aligned to bottom

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ main {
 }
 
 main:not(.aligned_to_top) {
-    align-self: end;
+    margin-block-start: auto;
 }
 
 /* 
